@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940530
+MANIFEST for ded, version t19940602
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
